--- a/css/style.css
+++ b/css/style.css
@@ -1,53 +1,170 @@
 @charset "utf-8";
-/* Div */
-body{margin:0;color:#555;min-width:320px;-webkit-text-size-adjust:100%;background-color:#eeeeee;font-family:"微软雅黑";font-size:14px;line-height:20px;}
-img{border-style:none;vertical-align:top;max-width:100%;height:auto;}
-a{text-decoration:none;color:#333;}
-a:hover{color:#ff7700;text-decoration:none;}
+*{
+	margin:0px;
+	padding:0px;
+}
+
+body{
+	font-family:'PT Sans Narrow', Aller;background:url('../images/background.jpg');
+}
+
+h2{
+	font-size:38px
+}
+
+p{
+	line-height:150%;
+	font-size:13pt;
+}
+
+a{
+	color:#39f;
+	text-decoration:none;
+	outline:none;
+	cursor:pointer;
+}
+
+a:hover{
+	color:#C00;
+	text-decoration:none;
+}
 
 
-.c-860{max-width:900px;margin-top:0px;margin-right:auto;margin-bottom:0px;margin-left:auto;padding-top:100px;padding-right:10px;padding-bottom:0px;padding-left:10px;}
-.c-demoslider{margin:0px auto;}
-/* Global styles */
-.cute-slider{position:relative;visibility:hidden;overflow:hidden;}
-.cute-ie8 *,.cute-ie7 *{filter:inherit;opacity:inherit;}
-/* Slider Controls */
-.br-controls{position:absolute;z-index:10;}
-.br-next,.br-previous,.br-slidecontrol,.br-thumb-bottom .br-thumb-img,.br-thumb-up .br-thumb-img,.br-thumblist{position:absolute;}
-.br-slidecontrol{list-style:none;cursor:auto!important;}
-.br-slidecontrol ul{margin:0px;padding:0px;height:0px;}
-.br-slidecontrol ul li{display:block;position:relative;float:left;cursor:pointer!important;}
-.br-slidecontrol ul li .br-control-selected{display:none;}
-.br-thumb-bottom,.br-thumb-up{position:relative;}
-.br-thumblist{width:100%;text-align:center;height:0px;left:0px;bottom:0px;}
-.br-thumblist-content .br-list-thumb img{cursor:pointer!important;}
-.br-thumb-img img{height:100%!important;}
-.br-slideinfo .top,.br-slideinfo .bottom{width:100%;}
-.br-slideinfo .right,.br-slideinfo .left{height:100%;}
-.br-slideinfo .more-btn{cursor:pointer!important;display:block;position:relative;text-decoration:none;}
-.br-slideinfo .subtitle,.br-slideinfo .title,.br-slideinfo .text{display:block;}
-/* Slider Timer */
-.br-circle-timer,.br-circle-timer .br-timer-dot,.br-bar-timer,.br-bar-timer .br-timer-bar{position:absolute!important;}
-.br-circle-timer .br-timer-dot{left:50%!important;top:50%!important;}
-/* Slider Captions */
-.br-captions div{position:absolute;text-shadow:none;}
-/* Slider Video */
-.br-video .play-btn,.br-video .close-btn{background-repeat:no-repeat;cursor:pointer!important;position:absolute;}
-.br-video .video-cont{position:absolute;z-index:2;}
-.cute-ie8 .video-cont,.cute-ie7 .video-cont{z-index:auto!important;}
-/* Slider Shadow */
-.cute-shadow{width:100%;}
-.cute-shadow img{max-width:100%;}
-/* Slider Loading */
-.br-loading{position:absolute;top:50%;left:50%;z-index:101;}
-.br-large-loading{position:absolute;top:50%;left:50%;z-index:100;}
-.br-loading .img,.br-large-loading .img{width:100%;height:100%;}
-/* Trying to remove all the default global styles of WordPress :) */
-.cute-slider img{max-width:none!important;}
-.cute-slider img,.entry-content .cute-slider img,.comment-content .cute-slider img,.widget .cute-slider img,.cute-shadow img,.entry-content .cute-shadow img,.comment-content .cute-shadow img,.widget .cute-shadow img{border-radius:0px;box-shadow:none;border:0px;margin:0px;}
-.entry-content .cute-slider *,.comment-content .cute-slider *,.widget .cute-slider *{line-height:normal;padding:0px;outline:none;border:0px;margin:0px;}
-.cute-slider br.clear{clear:both;}
-.top div ,.right div,.bottom div,.left div{padding:20px!important;}
-.br-infocontent .title{background:none!important;margin:0px!important;padding:0px!important;}
-.br-infocontent .text{text-align:justify;margin:10px 0px 0px 0px!important;padding:0px!important;}
-/**************** cuteslider end ****************/
+div.container{
+	position:relative;
+	height:660px;
+	width:100%;
+	overflow:hidden;
+	margin:auto;
+	margin-top:10px;
+	border-radius:5px;
+}
+
+div#ipresenter div#preloader{
+	position:absolute;
+	display:block;
+	width:200px;
+	height:6px;
+	z-index:200;
+	border:rgba(0,0,0,0.5) 1px solid;
+	border-radius:4px;
+	padding:1px;
+	-webkit-transform:translate(-100px, 0px);
+	-moz-transform:translate(-100px, 0px);
+	-o-transform:translate(-100px, 0px);
+	-ms-transform:translate(-100px, 0px);
+	transform:translate(-100px, 0px);
+	-webkit-box-shadow:0px 0px 8px rgba(0,0,0,0.5);
+	-moz-box-shadow:0px 0px 8px rgba(0,0,0,0.5);
+	-o-box-shadow:0px 0px 8px rgba(0,0,0,0.5);
+	-ms-box-shadow:0px 0px 8px rgba(0,0,0,0.5);
+	box-shadow:0px 0px 8px rgba(0,0,0,0.5);
+}
+
+div#ipresenter div#preloader div{
+	display:block;
+	width:0%;
+	height:6px;
+	background:rgba(0,0,0,0.5);
+	border-radius:3px;
+}
+
+div#ipresenter div.step{
+	display:block;
+	text-align:center;
+	z-index:10;
+	background:#FFF;
+	color:#000;
+	padding:20px;
+	box-shadow:3px 3px 0px rgba(0,0,0,0.2);
+}
+
+div#ipresenter div.step img{
+	max-height:600px;
+}
+
+.ipresenter-controlNav{
+	position:absolute;
+	bottom:0px;
+	left:50%;
+	-webkit-transform:translate(-50%, 0%);
+	-moz-transform:translate(-50%, 0%);
+	-o-transform:translate(-50%, 0%);
+	-ms-transform:translate(-50%, 0%);
+	transform:translate(-50%, 0%);
+	height:44px;
+}
+
+.ipresenter-controlNav a{
+	text-indent:-9999px;
+}
+
+.ipresenter-controlNav a.ipresenter-controlPrevNav{
+	float:left;
+	width:50px;
+	height:44px;
+	background:url('../images/slider-controls.png') no-repeat;
+}
+
+.ipresenter-controlNav a.ipresenter-controlNextNav{
+	float:left;
+	width:50px;
+	height:44px;
+	background:url('../images/slider-controls.png') no-repeat -50px 0px;
+}
+
+.ipresenter-controlNav div.ipresenter-items{
+	float:left;
+	padding:0px 10px 0px 10px;
+	height:44px;
+	background:url('../images/nav-bg.png');
+}
+
+.ipresenter-controlNav div.ipresenter-items ul{
+	list-style:none;
+}
+
+.ipresenter-controlNav div.ipresenter-items ul li{
+	float:left;
+	position:relative;
+}
+
+.ipresenter-controlNav a.ipresenter-control{
+	padding:0px;
+	float:left;
+	width:11px;
+	height:12px;
+	background:url('../images/bullets.png') no-repeat;
+	margin:3px;
+	margin-top:16px;
+	line-height:0px;
+}
+
+.ipresenter-controlNav a.ipresenter-control.active{
+	background-position:0px -12px;
+}
+
+.ipresenter-controlNav div.ipresenter-items div.ipresenter-tooltip{
+	display:none;
+	position:absolute;
+	background:url('../images/tooltip.png') no-repeat;
+	width:124px;
+	height:90px;
+	bottom:30px;
+	left:-64px;
+	padding:10px;
+	z-index:100;
+}
+
+.ipresenter-controlNav div.ipresenter-items div.ipresenter-tooltip div{
+	display:block;
+	width:124px;
+	height:84px;
+	overflow:hidden;
+	border-radius:2px;
+}
+
+.ipresenter-controlNav div.ipresenter-items div.ipresenter-tooltip img{
+	display:block;
+	width:124px;
+}
